# Granny.AI-autonomous-assistant-MVP

./: AGENTS.md  README.md  pubspec.yaml
Granny-voice/: EXPLANATION.md  FIX_OPENAI_401_ERROR.md  INSTALL.md  QUICKREF.md  README.md  agent.py  check_env.py  debug_agent_sig.py  debug_imports.py  debug_voice.py  diagnose_api_key.py  pyproject.toml  quickstart.ps1  server.py  test_api_key.py  test_openai_key.py
Granny-voice/livekit-voice-agent/: pyproject.toml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/granny_autonoumus/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/screens/: dashboard_screen.dart  onboarding_screen.dart
lib/services/: granny_state.dart  voice_session_service.dart
lib/widgets/: floating_help.dart  glowing_orb.dart  health_card.dart  profile_card.dart  quick_chip.dart  summary_card.dart  voice_orb_widget.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
