[project]
name = "granny-voice"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "livekit-agents[silero,turn-detector]~=1.3",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.2.1",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "livekit-api>=0.4",
    "livekit-plugins-openai>=0.7",
]
